5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4171/executions/1594_1806.log
== TEST (2019-03-20 23:53:43) 
-- CODE:
from math import factorial

print(factorial(0))
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 00:04:40) 
-- CODE:
from math import factorial

n = int(input("pessoas no grupo:"))
p(n) = 1 - factorial(365)/(365 - factorial(n))*((1/(365**n))


-- ERROR:
File "XXXX", line 6
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 00:04:59) 
-- CODE:
from math import factorial

n = int(input("pessoas no grupo:"))
p(n) = 1 - factorial(365)/(365 - factorial(n))*((1/(365**n))
																print(p(n))
-- ERROR:
File "XXXX", line 5
    print(p(n))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 00:12:47) 
-- CODE:
from math import factorial

n = int(input("pessoas no grupo:"))
1 - factorial(365)/(365 - factorial(n))*((1/(365**n))
													  
x = ((1/(365**n))
y = (365 - factorial(n))
											

-- ERROR:
File "XXXX", line 6
    x = ((1/(365**n))
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 00:12:53) 
-- CODE:
from math import factorial

n = int(input("pessoas no grupo:"))
1 - factorial(365)/(365 - factorial(n))*((1/(365**n))
													  
x = (1/(365**n)
y = (365 - factorial(n))
											

-- ERROR:
File "XXXX", line 6
    x = (1/(365**n)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 00:12:59) 
-- CODE:
from math import factorial

n = int(input("pessoas no grupo:"))
1 - factorial(365)/(365 - factorial(n))*((1/(365**n))
													  
x = (1/(365 ** n)
y = (365 - factorial(n))
											

-- ERROR:
File "XXXX", line 6
    x = (1/(365 ** n)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 00:13:03) 
-- CODE:
from math import factorial

n = int(input("pessoas no grupo:"))

1 - factorial(365)/(365 - factorial(n))*((1/(365**n))
													  
x = (1/(365 ** n)
y = (365 - factorial(n))
											

-- ERROR:
File "XXXX", line 7
    x = (1/(365 ** n)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 00:13:04) 
-- CODE:
from math import factorial

n = int(input("pessoas no grupo:"))

1 - factorial(365)/(365 - factorial(n))*((1/(365**n))
													  
x = (1/(365 ** n)
y = (365 - factorial(n))
											

-- ERROR:
File "XXXX", line 7
    x = (1/(365 ** n)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 00:13:05) 
-- CODE:
from math import factorial

n = int(input("pessoas no grupo:"))

1 - factorial(365)/(365 - factorial(n))*((1/(365**n))
													  
x = (1/(365 ** n)
y = (365 - factorial(n))
											

-- ERROR:
File "XXXX", line 7
    x = (1/(365 ** n)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 00:14:44) 
-- CODE:
from math import factorial

n = int(input("pessoas no grupo:"))
			

-- ERROR:
File "XXXX", line 7
    x = (1/(365 ** n)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 00:15:04) 
-- CODE:
from math import factorial

n = int(input("pessoas no grupo:"))
			
p(n) = n**2
-- ERROR:
File "XXXX", line 5
    p(n) = n**2
    ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:13:54) 
-- CODE:
from math import factorial

print(factorial(1))



-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:14:01) 
-- CODE:
from math import factorial

print(factorial(4))



-- OUTPUT:
24
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:14:12) 
-- CODE:
from math import factorial

print(factorial(365))



-- OUTPUT:
25104128675558732292929443748812027705165520269876079766872595193901106138220937419666018009000254169376172314360982328660708071123369979853445367910653872383599704355532740937678091491429440864316046925074510134847025546014098005907965541041195496105311886173373435145517193282760847755882291690213539123479186274701519396808504940722607033001246328398800550487427999876690416973437861078185344667966871511049653888130136836199010529180056125844549488648617682915826347564148990984138067809999604687488146734837340699359838791124995957584538873616661533093253551256845056046388738129702951381151861413688922986510005440943943014699244112555755279140760492764253740250410391056421979003289600000000000000000000000000000000000000000000000000000000000000000000000000000000000000000
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:22:14) 
-- CODE:
from math import factorial

n = (int(input("número de pessoas: ")))
a = (365 - n)
y = 1 - (factorial(365))/(factorial(a)) * (1/365**n)

print(round(y,2))
-- OUTPUT:
0.17
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:22:20) 
-- CODE:
from math import factorial

n = (int(input("numero de pessoas: ")))
a = (365 - n)
y = 1 - (factorial(365))/(factorial(a)) * (1/365**n)

print(round(y,2))
-- OUTPUT:
0.17
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:22:39) 
-- CODE:
from math import factorial

n = (int(input("numero de pessoas: ")))
a = (365 - n)
y = 1 - (factorial(365))/(factorial(a)) * (1/365**n)
y*100
print(round(y,2),"%")
-- OUTPUT:
0.17 %
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:22:47) 
-- CODE:
from math import factorial

n = (int(input("numero de pessoas: ")))
a = (365 - n)
y = 1 - (factorial(365))/(factorial(a)) * (1/365**n)
y*100
print(round(y,2),"%")
-- EXECUTION TIME:
0.16558
-- TEST CASE 1:
---- input:
12
---- correct output:
16.7
---- user output:
0.17 %
-- TEST CASE 2:
---- input:
24
---- correct output:
53.83
---- user output:
0.54 %
-- TEST CASE 3:
---- input:
99
---- correct output:
100.0
---- user output:
1.0 %
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:22:47) 
-- CODE:
from math import factorial

n = (int(input("numero de pessoas: ")))
a = (365 - n)
y = 1 - (factorial(365))/(factorial(a)) * (1/365**n)
y*100
print(round(y,2),"%")
-- EXECUTION TIME:
0.11759
-- TEST CASE 1:
---- input:
12
---- correct output:
16.7
---- user output:
0.17 %
-- TEST CASE 2:
---- input:
24
---- correct output:
53.83
---- user output:
0.54 %
-- TEST CASE 3:
---- input:
99
---- correct output:
100.0
---- user output:
1.0 %
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:22:56) 
-- CODE:
from math import factorial

n = (int(input("numero de pessoas: ")))
a = (365 - n)
y = 1 - (factorial(365))/(factorial(a)) * (1/365**n)
y*100
print(round(y,2),"%")
-- OUTPUT:
0.17 %
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:23:18) 
-- CODE:
from math import factorial

n = (int(input("numero de pessoas: ")))
a = (365 - n)
y = 1 - (factorial(365))/(factorial(a)) * (1/365**n)
y*10000
print(round(y,2),"%")
-- OUTPUT:
0.17 %
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:23:19) 
-- CODE:
from math import factorial

n = (int(input("numero de pessoas: ")))
a = (365 - n)
y = 1 - (factorial(365))/(factorial(a)) * (1/365**n)
y*10000
print(round(y,2),"%")
-- EXECUTION TIME:
0.209966
-- TEST CASE 1:
---- input:
12
---- correct output:
16.7
---- user output:
0.17 %
-- TEST CASE 2:
---- input:
24
---- correct output:
53.83
---- user output:
0.54 %
-- TEST CASE 3:
---- input:
99
---- correct output:
100.0
---- user output:
1.0 %
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:23:20) 
-- CODE:
from math import factorial

n = (int(input("numero de pessoas: ")))
a = (365 - n)
y = 1 - (factorial(365))/(factorial(a)) * (1/365**n)
y*10000
print(round(y,2),"%")
-- OUTPUT:
0.17 %
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:23:28) 
-- CODE:
from math import factorial

n = (int(input("numero de pessoas: ")))
a = (365 - n)
y = 1 - (factorial(365))/(factorial(a)) * (1/365**n)
y*10000000000000
print(round(y,2),"%")
-- EXECUTION TIME:
0.146278
-- TEST CASE 1:
---- input:
12
---- correct output:
16.7
---- user output:
0.17 %
-- TEST CASE 2:
---- input:
24
---- correct output:
53.83
---- user output:
0.54 %
-- TEST CASE 3:
---- input:
99
---- correct output:
100.0
---- user output:
1.0 %
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:23:28) 
-- CODE:
from math import factorial

n = (int(input("numero de pessoas: ")))
a = (365 - n)
y = 1 - (factorial(365))/(factorial(a)) * (1/365**n)
y*10000000000000
print(round(y,2),"%")
-- OUTPUT:
0.17 %
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:23:38) 
-- CODE:
from math import factorial

n = (int(input("numero de pessoas: ")))
a = (365 - n)
y = 1 - (factorial(365))/(factorial(a)) * (1/365**n)

print(round(y,2),"%")
-- EXECUTION TIME:
0.174704
-- TEST CASE 1:
---- input:
12
---- correct output:
16.7
---- user output:
0.17 %
-- TEST CASE 2:
---- input:
24
---- correct output:
53.83
---- user output:
0.54 %
-- TEST CASE 3:
---- input:
99
---- correct output:
100.0
---- user output:
1.0 %
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:23:48) 
-- CODE:
from math import factorial

n = (int(input("numero de pessoas: ")))
a = (365 - n)
y = 1 - (factorial(365))/(factorial(a)) * (1/365**n)
b = y*100
print(round(b,2),"%")
-- OUTPUT:
16.7 %
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:23:52) 
-- CODE:
from math import factorial

n = (int(input("numero de pessoas: ")))
a = (365 - n)
y = 1 - (factorial(365))/(factorial(a)) * (1/365**n)
b = y*100
print(round(b,2),"%")
-- EXECUTION TIME:
0.217315
-- TEST CASE 1:
---- input:
12
---- correct output:
16.7
---- user output:
16.7 %
-- TEST CASE 2:
---- input:
24
---- correct output:
53.83
---- user output:
53.83 %
-- TEST CASE 3:
---- input:
99
---- correct output:
100.0
---- user output:
100.0 %
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:23:53) 
-- CODE:
from math import factorial

n = (int(input("numero de pessoas: ")))
a = (365 - n)
y = 1 - (factorial(365))/(factorial(a)) * (1/365**n)
b = y*100
print(round(b,2),"%")
-- EXECUTION TIME:
0.134836
-- TEST CASE 1:
---- input:
12
---- correct output:
16.7
---- user output:
16.7 %
-- TEST CASE 2:
---- input:
24
---- correct output:
53.83
---- user output:
53.83 %
-- TEST CASE 3:
---- input:
99
---- correct output:
100.0
---- user output:
100.0 %
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:23:54) 
-- CODE:
from math import factorial

n = (int(input("numero de pessoas: ")))
a = (365 - n)
y = 1 - (factorial(365))/(factorial(a)) * (1/365**n)
b = y*100
print(round(b,2),"%")
-- EXECUTION TIME:
0.201997
-- TEST CASE 1:
---- input:
12
---- correct output:
16.7
---- user output:
16.7 %
-- TEST CASE 2:
---- input:
24
---- correct output:
53.83
---- user output:
53.83 %
-- TEST CASE 3:
---- input:
99
---- correct output:
100.0
---- user output:
16.7 %
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:23:54) 
-- CODE:
from math import factorial

n = (int(input("numero de pessoas: ")))
a = (365 - n)
y = 1 - (factorial(365))/(factorial(a)) * (1/365**n)
b = y*100
print(round(b,2),"%")
-- EXECUTION TIME:
0.138557
-- TEST CASE 1:
---- input:
12
---- correct output:
16.7
---- user output:
16.7 %
-- TEST CASE 2:
---- input:
24
---- correct output:
53.83
---- user output:
53.83 %
-- TEST CASE 3:
---- input:
99
---- correct output:
100.0
---- user output:
16.7 %
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:23:55) 
-- CODE:
from math import factorial

n = (int(input("numero de pessoas: ")))
a = (365 - n)
y = 1 - (factorial(365))/(factorial(a)) * (1/365**n)
b = y*100
print(round(b,2),"%")
-- EXECUTION TIME:
0.141308
-- TEST CASE 1:
---- input:
12
---- correct output:
16.7
---- user output:
16.7 %
-- TEST CASE 2:
---- input:
24
---- correct output:
53.83
---- user output:
53.83 %
-- TEST CASE 3:
---- input:
99
---- correct output:
100.0
---- user output:
16.7 %
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:23:55) 
-- CODE:
from math import factorial

n = (int(input("numero de pessoas: ")))
a = (365 - n)
y = 1 - (factorial(365))/(factorial(a)) * (1/365**n)
b = y*100
print(round(b,2),"%")
-- EXECUTION TIME:
0.148441
-- TEST CASE 1:
---- input:
12
---- correct output:
16.7
---- user output:
16.7 %
-- TEST CASE 2:
---- input:
24
---- correct output:
53.83
---- user output:
53.83 %
-- TEST CASE 3:
---- input:
99
---- correct output:
100.0
---- user output:
16.7 %
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:23:55) 
-- CODE:
from math import factorial

n = (int(input("numero de pessoas: ")))
a = (365 - n)
y = 1 - (factorial(365))/(factorial(a)) * (1/365**n)
b = y*100
print(round(b,2),"%")
-- EXECUTION TIME:
0.134968
-- TEST CASE 1:
---- input:
12
---- correct output:
16.7
---- user output:
16.7 %
-- TEST CASE 2:
---- input:
24
---- correct output:
53.83
---- user output:
53.83 %
-- TEST CASE 3:
---- input:
99
---- correct output:
100.0
---- user output:
16.7 %
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:23:56) 
-- CODE:
from math import factorial

n = (int(input("numero de pessoas: ")))
a = (365 - n)
y = 1 - (factorial(365))/(factorial(a)) * (1/365**n)
b = y*100
print(round(b,2),"%")
-- EXECUTION TIME:
0.132297
-- TEST CASE 1:
---- input:
12
---- correct output:
16.7
---- user output:
16.7 %
-- TEST CASE 2:
---- input:
24
---- correct output:
53.83
---- user output:
53.83 %
-- TEST CASE 3:
---- input:
99
---- correct output:
100.0
---- user output:
100.0 %
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:23:59) 
-- CODE:
from math import factorial

n = (int(input("numero de pessoas: ")))
a = (365 - n)
y = 1 - (factorial(365))/(factorial(a)) * (1/365**n)
b = y*100
print(round(b,2))
-- EXECUTION TIME:
0.182864
-- TEST CASE 1:
---- input:
12
---- correct output:
16.7
---- user output:
numero de pessoas: 16.7
-- TEST CASE 2:
---- input:
24
---- correct output:
53.83
---- user output:
numero de pessoas: 53.83
-- TEST CASE 3:
---- input:
99
---- correct output:
100.0
---- user output:
numero de pessoas: 100.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:23:59) 
-- CODE:
from math import factorial

n = (int(input("numero de pessoas: ")))
a = (365 - n)
y = 1 - (factorial(365))/(factorial(a)) * (1/365**n)
b = y*100
print(round(b,2))
-- OUTPUT:
16.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:24:29) 
-- CODE:
from math import factorial

n = (int(input("numero de pessoas: ")))
a = (365 - n)
y = 1 - (factorial(365))/(factorial(a)) * (1/365**n)
b = y*100
print(round(b,3))
-- EXECUTION TIME:
0.15059
-- TEST CASE 1:
---- input:
12
---- correct output:
16.7
---- user output:
16.702
-- TEST CASE 2:
---- input:
24
---- correct output:
53.83
---- user output:
53.834
-- TEST CASE 3:
---- input:
99
---- correct output:
100.0
---- user output:
100.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:24:30) 
-- CODE:
from math import factorial

n = (int(input("numero de pessoas: ")))
a = (365 - n)
y = 1 - (factorial(365))/(factorial(a)) * (1/365**n)
b = y*100
print(round(b,3))
-- OUTPUT:
16.702
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:24:37) 
-- CODE:
from math import factorial

n = (int(input("numero de pessoas: ")))
a = (365 - n)
y = 1 - (factorial(365))/(factorial(a)) * (1/365**n)
b = y*1000
print(round(b,3))
-- EXECUTION TIME:
0.111127
-- TEST CASE 1:
---- input:
12
---- correct output:
16.7
---- user output:
167.025
-- TEST CASE 2:
---- input:
24
---- correct output:
53.83
---- user output:
538.344
-- TEST CASE 3:
---- input:
99
---- correct output:
100.0
---- user output:
1000.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:24:38) 
-- CODE:
from math import factorial

n = (int(input("numero de pessoas: ")))
a = (365 - n)
y = 1 - (factorial(365))/(factorial(a)) * (1/365**n)
b = y*1000
print(round(b,3))
-- OUTPUT:
167.025
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:24:43) 
-- CODE:
from math import factorial

n = (int(input("numero de pessoas: ")))
a = (365 - n)
y = 1 - (factorial(365))/(factorial(a)) * (1/365**n)
b = y*100
print(round(b,3))
-- OUTPUT:
16.702
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:24:45) 
-- CODE:
from math import factorial

n = (int(input("numero de pessoas: ")))
a = (365 - n)
y = 1 - (factorial(365))/(factorial(a)) * (1/365**n)
b = y*100
print(round(b,3))
-- EXECUTION TIME:
0.162538
-- TEST CASE 1:
---- input:
12
---- correct output:
16.7
---- user output:
16.702
-- TEST CASE 2:
---- input:
24
---- correct output:
53.83
---- user output:
53.834
-- TEST CASE 3:
---- input:
99
---- correct output:
100.0
---- user output:
100.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:24:45) 
-- CODE:
from math import factorial

n = (int(input("numero de pessoas: ")))
a = (365 - n)
y = 1 - (factorial(365))/(factorial(a)) * (1/365**n)
b = y*100
print(round(b,3))
-- OUTPUT:
16.702
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:24:48) 
-- CODE:
from math import factorial

n = (int(input("numero de pessoas: ")))
a = (365 - n)
y = 1 - (factorial(365))/(factorial(a)) * (1/365**n)
b = y*100
print(round(b,3))
-- OUTPUT:
16.702
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:25:06) 
-- CODE:
from math import factorial

n = (int(input("numero de pessoas: ")))
a = (365 - n)
y = 1 - (factorial(365))/(factorial(a)) * (1/365**n)
b = y*100
print("chance:"round(b,3))
-- ERROR:
File "XXXX", line 7
    print("chance:"round(b,3))
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:25:06) 
-- CODE:
from math import factorial

n = (int(input("numero de pessoas: ")))
a = (365 - n)
y = 1 - (factorial(365))/(factorial(a)) * (1/365**n)
b = y*100
print("chance:"round(b,3))
-- EXECUTION TIME:
0.222567
-- ERROR:
  File "/home/codebench/codes/1594/1806/main.py", line 7
    print("chance:"round(b,3))
                       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:25:11) 
-- CODE:
from math import factorial

n = (int(input("numero de pessoas: ")))
a = (365 - n)
y = 1 - (factorial(365))/(factorial(a)) * (1/365**n)
b = y*100
print("chance:",round(b,3))
-- OUTPUT:
chance: 16.702
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:25:22) 
-- CODE:
from math import factorial

n = (int(input("numero de pessoas: ")))
a = (365 - n)
y = 1 - (factorial(365))/(factorial(a)) * (1/365**n)
b = y*100
print("chance:",round(b,3),"%")
-- OUTPUT:
chance: 16.702 %
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:26:12) 
-- CODE:
from math import factorial

n = (int(input("numero de pessoas: ")))
a = (365 - n)
y = 1 - (factorial(365))/(factorial(a)) * (1/365**n)
b = y*100
print("chance:",round(b,3),"%")
-- OUTPUT:
chance: 16.702 %
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:26:36) 
-- CODE:
from math import factorial

n = (int(input("numero de pessoas: ")))
a = (365 - n)
y = 1 - (factorial(365))/(factorial(a)) * (1/365**n)
b = y*100
print("chance:",round(b,3),"%")
-- OUTPUT:
chance: 16.702 %
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:26:43) 
-- CODE:
from math import factorial

n = (int(input("numero de pessoas: ")))
a = (365 - n)
y = 1 - (factorial(365))/(factorial(a)) * (1/365**n)
b = y*100
print("chance:",round(b,3),"%")
-- OUTPUT:
chance: 16.702 %
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:26:46) 
-- CODE:
from math import factorial

n = (int(input("numero de pessoas: ")))
a = (365 - n)
y = 1 - (factorial(365))/(factorial(a)) * (1/365**n)
b = y*100
print("chance:",round(b,3),"%")
-- OUTPUT:
chance: 16.702 %
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:26:54) 
-- CODE:
from math import factorial

n = (int(input("numero de pessoas: ")))
a = (365 - n)
y = 1 - (factorial(365))/(factorial(a)) * (1/365**n)
b = y*100
print("chance:",round(b,3),"%")
-- OUTPUT:
chance: 16.702 %
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:27:00) 
-- CODE:
from math import factorial

n = (int(input("numero de pessoas: ")))
a = (365 - n)
y = 1 - (factorial(365))/(factorial(a)) * (1/365**n)
b = y*100
print("chance:",round(b,3),"%")
-- OUTPUT:
chance: 16.702 %
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:27:05) 
-- CODE:
from math import factorial

n = (int(input("numero de pessoas: ")))
a = (365 - n)
y = 1 - (factorial(365))/(factorial(a)) * (1/365**n)
b = y*100
print("chance:",round(b,3),"%")
-- OUTPUT:
chance: 16.702 %
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:27:08) 
-- CODE:
from math import factorial

n = (int(input("numero de pessoas: ")))
a = (365 - n)
y = 1 - (factorial(365))/(factorial(a)) * (1/365**n)
b = y*100
print("chance:",round(b,3),"%")
-- OUTPUT:
chance: 16.702 %
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:27:13) 
-- CODE:
from math import factorial

n = (int(input("numero de pessoas: ")))
a = (365 - n)
y = 1 - (factorial(365))/(factorial(a)) * (1/365**n)
b = y*100
print("chance:",round(b,3),"%")
-- OUTPUT:
chance: 16.702 %
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:27:15) 
-- CODE:
from math import factorial

n = (int(input("numero de pessoas: ")))
a = (365 - n)
y = 1 - (factorial(365))/(factorial(a)) * (1/365**n)
b = y*100
print("chance:",round(b,3),"%")
-- OUTPUT:
chance: 16.702 %
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:27:17) 
-- CODE:
from math import factorial

n = (int(input("numero de pessoas: ")))
a = (365 - n)
y = 1 - (factorial(365))/(factorial(a)) * (1/365**n)
b = y*100
print("chance:",round(b,3),"%")
-- OUTPUT:
chance: 16.702 %
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:27:19) 
-- CODE:
from math import factorial

n = (int(input("numero de pessoas: ")))
a = (365 - n)
y = 1 - (factorial(365))/(factorial(a)) * (1/365**n)
b = y*100
print("chance:",round(b,3),"%")
-- OUTPUT:
chance: 16.702 %
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:27:21) 
-- CODE:
from math import factorial

n = (int(input("numero de pessoas: ")))
a = (365 - n)
y = 1 - (factorial(365))/(factorial(a)) * (1/365**n)
b = y*100
print("chance:",round(b,3),"%")
-- OUTPUT:
chance: 16.702 %
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:27:22) 
-- CODE:
from math import factorial

n = (int(input("numero de pessoas: ")))
a = (365 - n)
y = 1 - (factorial(365))/(factorial(a)) * (1/365**n)
b = y*100
print("chance:",round(b,3),"%")
-- OUTPUT:
chance: 16.702 %
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:27:23) 
-- CODE:
from math import factorial

n = (int(input("numero de pessoas: ")))
a = (365 - n)
y = 1 - (factorial(365))/(factorial(a)) * (1/365**n)
b = y*100
print("chance:",round(b,3),"%")
-- OUTPUT:
chance: 16.702 %
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:27:25) 
-- CODE:
from math import factorial

n = (int(input("numero de pessoas: ")))
a = (365 - n)
y = 1 - (factorial(365))/(factorial(a)) * (1/365**n)
b = y*100
print("chance:",round(b,3),"%")
-- OUTPUT:
chance: 16.702 %
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:27:26) 
-- CODE:
from math import factorial

n = (int(input("numero de pessoas: ")))
a = (365 - n)
y = 1 - (factorial(365))/(factorial(a)) * (1/365**n)
b = y*100
print("chance:",round(b,3),"%")
-- OUTPUT:
chance: 16.702 %
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:27:28) 
-- CODE:
from math import factorial

n = (int(input("numero de pessoas: ")))
a = (365 - n)
y = 1 - (factorial(365))/(factorial(a)) * (1/365**n)
b = y*100
print("chance:",round(b,3),"%")
-- OUTPUT:
chance: 16.702 %
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:27:29) 
-- CODE:
from math import factorial

n = (int(input("numero de pessoas: ")))
a = (365 - n)
y = 1 - (factorial(365))/(factorial(a)) * (1/365**n)
b = y*100
print("chance:",round(b,3),"%")
-- OUTPUT:
chance: 16.702 %
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:27:36) 
-- CODE:
from math import factorial

n = (int(input("numero de pessoas: ")))
a = (365 - n)
y = 1 - (factorial(365))/(factorial(a)) * (1/365**n)
b = y*100
print("chance:",round(b,2),"%")
-- EXECUTION TIME:
0.110729
-- TEST CASE 1:
---- input:
12
---- correct output:
16.7
---- user output:
chance: 16.7 %
-- TEST CASE 2:
---- input:
24
---- correct output:
53.83
---- user output:
chance: 53.83 %
-- TEST CASE 3:
---- input:
99
---- correct output:
100.0
---- user output:
chance: 100.0 %
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:27:37) 
-- CODE:
from math import factorial

n = (int(input("numero de pessoas: ")))
a = (365 - n)
y = 1 - (factorial(365))/(factorial(a)) * (1/365**n)
b = y*100
print("chance:",round(b,2),"%")
-- EXECUTION TIME:
0.0944109
-- TEST CASE 1:
---- input:
12
---- correct output:
16.7
---- user output:
chance: 16.7 %
-- TEST CASE 2:
---- input:
24
---- correct output:
53.83
---- user output:
chance: 53.83 %
-- TEST CASE 3:
---- input:
99
---- correct output:
100.0
---- user output:
chance: 16.7 %
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:27:38) 
-- CODE:
from math import factorial

n = (int(input("numero de pessoas: ")))
a = (365 - n)
y = 1 - (factorial(365))/(factorial(a)) * (1/365**n)
b = y*100
print("chance:",round(b,2),"%")
-- EXECUTION TIME:
0.142936
-- TEST CASE 1:
---- input:
12
---- correct output:
16.7
---- user output:
chance: 16.7 %
-- TEST CASE 2:
---- input:
24
---- correct output:
53.83
---- user output:
chance: 53.83 %
-- TEST CASE 3:
---- input:
99
---- correct output:
100.0
---- user output:
chance: 100.0 %
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:27:38) 
-- CODE:
from math import factorial

n = (int(input("numero de pessoas: ")))
a = (365 - n)
y = 1 - (factorial(365))/(factorial(a)) * (1/365**n)
b = y*100
print("chance:",round(b,2),"%")
-- OUTPUT:
chance: 16.7 %
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:27:38) 
-- CODE:
from math import factorial

n = (int(input("numero de pessoas: ")))
a = (365 - n)
y = 1 - (factorial(365))/(factorial(a)) * (1/365**n)
b = y*100
print("chance:",round(b,2),"%")
-- EXECUTION TIME:
0.198246
-- TEST CASE 1:
---- input:
12
---- correct output:
16.7
---- user output:
chance: 100.0 %
-- TEST CASE 2:
---- input:
24
---- correct output:
53.83
---- user output:
numero de pessoas: chance: 53.83 %
-- TEST CASE 3:
---- input:
99
---- correct output:
100.0
---- user output:
numero de pessoas: chance: 100.0 %
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:27:52) 
-- CODE:
from math import factorial

n = (int(input("numero de pessoas: ")))
a = (365 - n)
y = 1 - (factorial(365))/(factorial(a)) * (1/365**n)
b = y*100
print(round(b,2))
-- OUTPUT:
16.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:27:53) 
-- CODE:
from math import factorial

n = (int(input("numero de pessoas: ")))
a = (365 - n)
y = 1 - (factorial(365))/(factorial(a)) * (1/365**n)
b = y*100
print(round(b,2))
-- OUTPUT:
16.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:27:54) 
-- CODE:
from math import factorial

n = (int(input("numero de pessoas: ")))
a = (365 - n)
y = 1 - (factorial(365))/(factorial(a)) * (1/365**n)
b = y*100
print(round(b,2))
-- EXECUTION TIME:
0.126426
-- TEST CASE 1:
---- input:
12
---- correct output:
16.7
---- user output:
numero de pessoas: 16.7
-- TEST CASE 2:
---- input:
24
---- correct output:
53.83
---- user output:
numero de pessoas: 53.83
-- TEST CASE 3:
---- input:
99
---- correct output:
100.0
---- user output:
numero de pessoas: 100.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:27:55) 
-- CODE:
from math import factorial

n = (int(input("numero de pessoas: ")))
a = (365 - n)
y = 1 - (factorial(365))/(factorial(a)) * (1/365**n)
b = y*100
print(round(b,2))
-- EXECUTION TIME:
0.135034
-- TEST CASE 1:
---- input:
12
---- correct output:
16.7
---- user output:
16.7
-- TEST CASE 2:
---- input:
24
---- correct output:
53.83
---- user output:
53.83
-- TEST CASE 3:
---- input:
99
---- correct output:
100.0
---- user output:
100.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 16:14:04) 
-- CODE:
from math import*
n = (int(input("numero de pessoas: ")))
a = (365 - n)
y = 1 - (factorial(365))/(factorial(a)) * (1/365**n)
b = y*100
print(round(b,2))
-- EXECUTION TIME:
0.212156
-- TEST CASE 1:
---- input:
12
---- correct output:
16.7
---- user output:
16.7
-- TEST CASE 2:
---- input:
24
---- correct output:
53.83
---- user output:
53.83
-- TEST CASE 3:
---- input:
99
---- correct output:
100.0
---- user output:
100.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
